2005-05-23  Richard Hult  <richard@imendio.com>

	* Release 2.6.4.7.

	* configure.in: Bump version.

2005-05-23  Anders Carlsson  <andersca@imendio.com>

	* gconf/Makefile.am:
	Define the standard system bus socket
	
	* gconf/gconf-dbus.c:
	Use a separate connection for the bus.
	
2005-05-20  Richard Hult  <richard@imendio.com>

	* Release 2.6.4.6.

	* configure.in: Bump version.

	* gconf/Makefile.am: Add localstatedir for consistency.

	* backends/markup-write-state.c (markup_write_state_write): Add
	log message when the state file can't be opened. Disable debug
	spew.

2005-05-17  Mikael Hallendal  <micke@imendio.com>

	* gconf/gconf-client.c: 
	- Don't free the entry key here, owned by the entry.
	- Fix already in HEAD in GConf.

2005-04-27  Richard Hult  <richard@imendio.com>

	Release 2.6.4.5.
	
	* configure.in: Bump version.

2005-04-26  Richard Hult  <richard@imendio.com>

	* backends/markup-backend.c (sync_all, ms_new): Don't use
	gconf_main_quit, since it's in the daemon. Just exit instead and
	don't change the state flag.

2005-04-26  Richard Hult  <richard@imendio.com>

	* Release 2.6.4.4.
	
	Disable debug and restore the default conf to the normal one.
	
	* gconf/gconf-database.c (gconf_database_schedule_sync): Use a
	define for the sync timeout, and make it re-schedule a new timeout
	if we already have one. This makes the syncing group writes that
	are close in time together.

	* configure.in: Add flag for dbus service files location.
	Bump version. Add some info when running configure on what options
	were choosen.

	Add reliable writes to handle shutdown in the middle of writing a
	set of keys better.
	
	* backends/Makefile.am:
	* backends/gconf-merge-tree.c:
	* backends/markup-write-state.[ch]: Add functions for handling the
	write state.
	
	* backends/markup-backend.c: 
	* backends/markup-tree.c: Use the write state functions and save
	the data to two databases and update the state accordingly.
