@@ -1,4 +1,3 @@
-
 SUBDIRS = gconf backends po doc examples
 DIST_SUBDIRS=tests $(SUBDIRS)
 
@@ -9,9 +8,10 @@ dbusconfdir=$(sysconfdir)/dbus-1/system.d
 dbusconf_DATA = $(DBUS_GCONF_CONF)
 endif
 
-EXTRA_DIST=gconf.m4.in TODO \
-	   gconf-2.0.pc.in  \
-	   $(DBUS_GCONF_CONF)
+EXTRA_DIST=gconf.m4.in TODO	\
+	gconf-2.0.pc.in  	\
+	README.dbus		\
+	$(DBUS_GCONF_CONF)
 
 install-data-local:
 	-mkdir -p $(DESTDIR)$(datadir)/aclocal
