@@ -1,3 +1,18 @@
+This is a version of GConf that uses D-BUS
+(http://www.freedesktop.org/Software/dbus) as IPC mechanism instead of
+ORBit. The intended use for this version is platforms where the whole
+Bonobo/ORBit stack can't be used.
+
+The version is based on GConf 2.6 and has a configure option added that
+lets you choose either D-BUS or ORBit as IPC method. Please note that
+this is not intended as the base for a new GConf version but rather a
+way to replace ORBit with D-BUS with a minimal patch.
+
+Please visit the GConf/D-BUS developer pages for more information:
+
+http://developer.imendio.com/wiki/GConf_D-BUS
+
+
 Testing GConf/D-BUS
 ===================
 
